rust/src/tests/errors/eperm.rs
#[cfg(any(target_os = "freebsd"))]
mod flag;
